--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,35 @@
+---
+import '../styles/global.css';
+import Header from '../components/Header.astro';
+---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Mi porfolio · Álvaro Juárez</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
 
 <style>
-	html,
+	:root{
+		color-scheme: light dark;
+	}
+
+
+	html{
+		/*font-family: Arial, Helvetica, sans-serif;*/
+	}
+
 	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+		display: flex;
+		justify-content: center;
+		background: #050505;
 	}
 </style>
