--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '@fontsource-variable/onest';
 import '../styles/global.css';
 import Header from '../components/Header.astro';
 ---
@@ -24,12 +25,13 @@ import Header from '../components/Header.astro';
 
 
 	html{
-		/*font-family: Arial, Helvetica, sans-serif;*/
+		font-family: 'Onest Variable', sans-serif;
 	}
 
 	body {
+		background: #050505;
 		display: flex;
 		justify-content: center;
-		background: #050505;
+		min-height: 100vh;
 	}
 </style>
