--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ import Header from '../components/Header.astro';
 	body {
 		background: #050505;
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
 		min-height: 100vh;
 	}
 </style>
