--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,7 @@
-<header class="flex justify-between items-center py-3 w-280 mx-auto">
-    <img 
-        class="rounded-full w-12 h-12 object-contain"
-        src="/foto.png" 
-        alt="Foto alvaro"
-    />
+<header class="flex justify-center items-center py-5 w-280 mx-auto">
     
-    <nav class="flex flex-row gap-x-10 opacity-80">
+    <nav class="flex flex-row gap-x-4 opacity-80 text-sm">
+        <a href="#home" class="mx-4">Inicio</a>
         <a href="#aboutme" class="mx-4">Sobre mí</a>
         <a href="#projects" class="mx-4">Proyectos</a>
         <a href="#contact" class="mx-4">Contacto</a>
