--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,12 +13,16 @@ import Header from '../components/Header.astro';
 		<title>Mi porfolio · Álvaro Juárez</title>
 	</head>
 	<body>
+		<div 
+			class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+			>
+		</div>
 		<Header />
 		<slot />
 	</body>
 </html>
 
-<style>
+<style is:global>
 	:root{
 		color-scheme: light dark;
 	}
@@ -29,7 +33,7 @@ import Header from '../components/Header.astro';
 	}
 
 	body {
-		background: #050505;
+		background: #1a1919;
 		display: flex;
 		flex-direction: column;
 		min-height: 100vh;
