--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 <header class="flex justify-center items-center py-5 w-280 mx-auto">
     
     <nav class="flex flex-row gap-x-4 opacity-80 text-sm">
-        <a href="#home" class="mx-4">Inicio</a>
-        <a href="#aboutme" class="mx-4">Sobre mí</a>
-        <a href="#projects" class="mx-4">Proyectos</a>
-        <a href="#contact" class="mx-4">Contacto</a>
+        <a href="#top" class="mx-4">Inicio</a>
+        <a href="#proyectos" class="mx-4">Proyectos</a>
+        <a href="#sobre-mi" class="mx-4">Sobre mí</a>
+        <a href="#contacto" class="mx-4">Contacto</a>
     </nav>
 
 </header>
