--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ interface Props {
 import '@fontsource-variable/onest';
 import '../styles/global.css';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 const {
 	title = "Porfolio Alvaro Juárez · Desarrollador de software", 
@@ -30,6 +31,7 @@ const {
 		</div>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
