--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
-<footer class="rounded-lg shadow m-4 w-full xl:w-280 mx-auto mb-10">
+<footer class="w-full bg-transparent mb-10">
   <div
-    class="w-full mx-auto max-w-7xl p-4 md:flex md:items-center md:justify-between"
+    class="w-full mx-auto lg:max-w-4xl md:max-w-2xl rounded-lg shadow px-4 py-5 md:px-6 md:flex md:items-center md:justify-between gap-4"
   >
     <span class="text-sm sm:text-center text-yellow-200/90"
       >© 2025 <a href="https://flowbite.com/" class="hover:underline"
