--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,22 +13,24 @@ import UserIcon from '../components/icons/User.astro';
 <Layout>
 	<main>
 		<SectionContainer class="py-20 pb-24">
-			<img 
-				class="rounded-full size-40 object-contain mb-4"
-				src="/foto.png" 
-				alt="Foto alvaro"
-			/>
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 items-center pb-4">
-				Hey, soy Álvaro
+			<div class="flex items-center gap-3 mb-4 flex-wrap">
+				<img 
+					class="rounded-full size-36 object-contain"
+					src="/foto.png" 
+					alt="Foto alvaro"
+				/>
 				<a href="https://www.linkedin.com/in/%C3%A1lvaro-ju%C3%A1rez-garc%C3%ADa-894254303/"
 						target="_blank"
 						rel="noopener noreferrer"
 						class="flex items-center"
 				>
-				<div class="flex justify-center items-center px-2 py-1 bg-green-400 bg-opacity-20 text-black text-xs font-light rounded-full whitespace-nowrap">
+				<div class="flex justify-center items-center px-3 py-1 bg-green-400 bg-opacity-20 text-black text-xs font-light rounded-full whitespace-nowrap">
 					Disponible para trabajar
 				</div>
 				</a>
+			</div>
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 items-center pb-4">
+				Hey, soy Álvaro
 			</h1>
 			<h2 class="text-2xl text-wrap">
 				<span class="text-amber-400">Ingeniería Informática</span> · 
