--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -138,7 +138,7 @@ const PROJECTS = [
             </div>
             <div class="flex flex-col">
                 <h3 class="text-2xl font-semibold text-yellow-200 mb-4">{title}</h3>
-                <p class="text-lg mb-6 text-justify flex-grow">{description}</p>
+                <p class="text-lg mb-6 text-justify grow">{description}</p>
                 <ul class="flex gap-3 flex-row flex-wrap items-center mb-6">
                     {tags.map((tag) =>(
                         <li>
