--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import '../styles/global.css';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-const props = Astro.props as Props; // type the props to avoid TS complaints
+const props = Astro.props as Props; 
 const {
 	title = "Porfolio Alvaro Juárez · Desarrollador de software",
 	description = "Contrata a Álvaro Juárez, desarrollador de software especializado en crear soluciones innovadoras y eficientes."
@@ -40,10 +40,9 @@ const {
 </html>
 
 <style is:global>
-	:root{
-		color-scheme: light dark;
+	:root {
+		color-scheme: dark;
 	}
-
 
 	html{
 		font-family: 'Onest Variable', sans-serif;
@@ -52,6 +51,7 @@ const {
 
 	body {
 		background: #0a0a0a;
+		color: #f7f7f7;
 		display: flex;
 		flex-direction: column;
 		min-height: 100vh;
