--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,11 @@
     class="w-full mx-auto lg:max-w-4xl md:max-w-2xl rounded-lg shadow px-4 py-5 md:px-6 md:flex md:items-center md:justify-between gap-4"
   >
     <span class="text-sm sm:text-center text-yellow-200/90"
-      >© 2025 <a href="https://flowbite.com/" class="hover:underline"
+      >© 2025 <a 
+              href="https://www.linkedin.com/in/%C3%A1lvaro-ju%C3%A1rez-garc%C3%ADa-894254303/" 
+              class="hover:underline"
+              target="_blank"
+              rel="noopener noreferrer"
         >Álvaro Juárez</a
       >. Casi todos los derechos reservados.
     </span>
