--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,7 @@ import MySQLIcon from './icons/MySQL.astro';
 import ExpressIcon from './icons/Express.astro';
 import NodejsIcon from './icons/Nodejs.astro';
 import SQLiteIcon from './icons/SQLite.astro';
-import GitHubIcon from './icons/GitHub.astro';
+import GitHubIcon from './icons/Github.astro';
 import LinkIcon from './icons/Link.astro';
 import AstroIcon from './icons/AIcon.astro';
 
