--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LinkedInIcon from '../components/icons/LinkedIn.astro';
-import GitHubIcon from '../components/icons/GitHub.astro';
+import GitHubIcon from '../components/icons/Github.astro';
 import SocialPill from '../components/SocialPill.astro';
 import MailIcon from '../components/icons/Mail.astro';
 import SectionContainer from '../components/SectionContainer.astro';
@@ -75,7 +75,13 @@ import UserIcon from '../components/icons/User.astro';
                         Sobre mí
                     </h2>
                     <p class="text-lg text-justify">
-						Soy Álvaro Juárez García, estudiante de cuarto año de Ingeniería Informática y desarrollador de software con interés en el desarrollo web. Me gusta crear aplicaciones funcionales, bien estructuradas y con una experiencia de usuario clara.
+						Soy Álvaro Juárez García, estudiante de cuarto año de <span class="text-amber-200 ">Ingeniería Informática</span> y desarrollador de software con interés en el <span class="text-amber-200 ">desarrollo web</span>. 
+					</p>
+					<p class="text-lg text-justify mt-4">
+						Me apasiona crear aplicaciones web funcionales, bien estructuradas y con una experiencia de usuario clara.
+					</p>
+					<p class="text-lg text-justify mt-4">
+						Actualmente, estoy explorando el campo de la <span class="text-amber-200">Inteligencia Artificial</span> y su integración en aplicaciones web para desarrollar soluciones innovadoras.
 					</p>
                 </div>
 
