--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer class="w-full bg-transparent mb-10">
   <div
-    class="w-full mx-auto lg:max-w-4xl md:max-w-2xl rounded-lg shadow px-4 py-5 md:px-6 md:flex md:items-center md:justify-between gap-4"
+    class="w-full rounded-lg shadow px-4 py-5 md:px-6 md:flex md:items-center md:justify-between gap-4"
   >
     <span class="text-sm sm:text-center text-yellow-200/90"
       >© 2025 <a 
