--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
-<header class="flex justify-center items-center py-5 w-full">
-    <nav class="flex flex-row gap-x-2 opacity-80 text-sm">
+<header class="sticky top-0 flex justify-center items-center py-5 z-50 w-full">
+    <nav class="flex flex-row gap-x-2 text-sm px-4 py-4 rounded-full bg-slate-900">
         <a href="#top" class="mx-4 px-1 hover:text-amber-400">Inicio</a>
         <a href="#proyectos" class="mx-4 px-1 hover:text-amber-400">Proyectos</a>
         <a href="#sobre-mi" class="mx-4 px-1 hover:text-amber-400">Sobre mí</a>
